force-app/main/default/objects/Account/fields/Non_Borrower_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Non_Borrower_Account_Type__c</fullName>
    <label>Account Record Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Auction Company</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Broker Plus</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Correspondent</fullName>
            </value>
            <value>
                <fullName>Correspondent - Bridge</fullName>
            </value>
            <value>
                <fullName>Credit and Background Search</fullName>
            </value>
            <value>
                <fullName>Diligence Review</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Entity Search</fullName>
            </value>
            <value>
                <fullName>Flood Check</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Insurance Agent</fullName>
            </value>
            <value>
                <fullName>Insurance Review</fullName>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
            </value>
            <value>
                <fullName>Investment Bank</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Lease/Purchase Review</fullName>
            </value>
            <value>
                <fullName>Legal Counsel</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Lender Underwriter</fullName>
            </value>
            <value>
                <fullName>Mortgage Broker</fullName>
            </value>
            <value>
                <fullName>Mortgage Broker/Banker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Ratings Agency</fullName>
            </value>
            <value>
                <fullName>Real Estate Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>