force-app/main/default/objects/Account/fields/Non_Borrower_Account_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Non_Borrower_Account_Type_c__c</fullName>
    <label>Non-Borrower Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Title and Escrow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>