force-app/main/default/objects/Account/fields/Number_of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contacts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Contacts that belong to this Account</description>
    <inlineHelpText>Number of Contacts that belong to this Account</inlineHelpText>
    <label># of Contacts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>