force-app/main/default/objects/Account/fields/of_Flips_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>of_Flips_Per_Year__c</fullName>
    <description>Number of slips per year
not used</description>
    <label># of Flips Per Year</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>