force-app/main/default/objects/Account/fields/of_Volume_Sold__c.field-meta.xml
<CustomField>
    <fullName>of_Volume_Sold__c</fullName>
    <description>Not used</description>
    <label>% of Volume Sold</label>
    <length>4</length>
    <type>Text</type>
</CustomField>