force-app/main/default/objects/Account/fields/Originated_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Originated_Product_Type__c</fullName>
    <description>The Product Types this Lender originates</description>
    <inlineHelpText>The Product Types this Lender originates</inlineHelpText>
    <label>Originated Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Originated_Product_Type</valueSetName>
    </valueSet>
</CustomField>