force-app/main/default/objects/Account/fields/Originated_Product_Type_DSCR__c.field-meta.xml
<CustomField>
    <fullName>Originated_Product_Type_DSCR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lender Partnerships Field</description>
    <label>Originated Product Type - DSCR</label>
    <type>Checkbox</type>
</CustomField>