force-app/main/default/objects/Account/fields/Originating_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Originating_Lead_ID__c</fullName>
    <description>Originating Salesforce Lead ID for Account</description>
    <label>Originating Lead ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>