force-app/main/default/objects/Account/fields/Other_Monthly_of_Volume__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_of_Volume__c</fullName>
    <formula>Other_Monthly_Volume__c / Total_Monthly_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other - Monthly % of Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>