force-app/main/default/objects/Account/fields/Other_Monthly_Units__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_Units__c</fullName>
    <description>Lender partnerships field. The estimated average monthly count of other units in their lending portfolio.</description>
    <inlineHelpText>The estimated average monthly count of other units in their lending portfolio. Other = categorized outside of the defined Monthly # of Unit fields provided.</inlineHelpText>
    <label>Other - Monthly Units (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>