force-app/main/default/objects/Account/fields/Other_Trading_Partners__c.field-meta.xml
<CustomField>
    <fullName>Other_Trading_Partners__c</fullName>
    <description>Other trading partners that account does business with outside of Corevest</description>
    <label>Other Trading Partners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>