force-app/main/default/objects/Account/fields/Payment_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Payment_Instructions__c</fullName>
    <description>Payment Instructions that will reflect on the Closing Loan Documents</description>
    <inlineHelpText>Payment Instructions that will reflect on the Closing Loan Documents</inlineHelpText>
    <label>Payment Instructions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>