force-app/main/default/objects/Account/fields/Preferred_Appraisal_Company_AMC__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Appraisal_Company_AMC__c</fullName>
    <label>Preferred Appraisal Company (AMC)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear Capital</fullName>
            </value>
            <value>
                <fullName>Valuation Services AMC</fullName>
            </value>
            <value>
                <fullName>Appraisal Nation</fullName>
            </value>
            <value>
                <fullName>Accurate Group</fullName>
            </value>
            <value>
                <fullName>Nationwide</fullName>
            </value>
            <value>
                <fullName>Universal Appraisal</fullName>
            </value>
            <value>
                <fullName>TriServ</fullName>
            </value>
            <value>
                <fullName>Non-AMC</fullName>
            </value>
            <value>
                <fullName>Incenter</fullName>
            </value>
            <value>
                <fullName>FastApp</fullName>
            </value>
            <value>
                <fullName>ServiceLink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>