force-app/main/default/objects/Account/fields/Preferred_Construction_Management_Compan__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Construction_Management_Compan__c</fullName>
    <label>Preferred Construction Management Compan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Land Gorilla</fullName>
            </value>
            <value>
                <fullName>Trinity</fullName>
            </value>
            <value>
                <fullName>BuildZig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>