force-app/main/default/objects/Account/fields/Pres_ID__c.field-meta.xml
<CustomField>
    <fullName>Pres_ID__c</fullName>
    <externalId>true</externalId>
    <label>Pres ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>