force-app/main/default/objects/Account/fields/Price_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Price_Percentage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Price Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>