force-app/main/default/objects/Account/fields/Primary_Lender__c.field-meta.xml
<CustomField>
    <fullName>Primary_Lender__c</fullName>
    <description>Primary Lender (Updated Monthly with 3rd Party Data)</description>
    <inlineHelpText>Primary Lender (Updated Monthly with 3rd Party Data)</inlineHelpText>
    <label>Primary Lender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>