force-app/main/default/objects/Account/fields/Principals__c.field-meta.xml
<CustomField>
    <fullName>Principals__c</fullName>
    <inlineHelpText>Principals w/ Ownership or Controlling Interest</inlineHelpText>
    <label>Principals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>