force-app/main/default/objects/Account/fields/Prior_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Prior_Utilization__c</fullName>
    <description>The highest % of Utilization on Lines of Credit</description>
    <inlineHelpText>The highest % of Utilization on Lines of Credit</inlineHelpText>
    <label>Prior Utilization</label>
    <summarizedField>Opportunity.Utilization__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Bridge Loan</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.LOC_Loan_Type__c</field>
        <operation>equals</operation>
        <value>Credit Line</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>