force-app/main/default/objects/Account/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Term Lending</fullName>
            </value>
            <value>
                <fullName>Bridge Lending</fullName>
            </value>
            <value>
                <fullName>Single Asset Lending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>