force-app/main/default/objects/Account/fields/Profitable__c.field-meta.xml
<CustomField>
    <fullName>Profitable__c</fullName>
    <label>Profitable?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>