force-app/main/default/objects/Account/fields/Projected_Volume__c.field-meta.xml
<CustomField>
    <fullName>Projected_Volume__c</fullName>
    <label>Projected Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>