force-app/main/default/objects/Account/fields/Projections__c.field-meta.xml
<CustomField>
    <fullName>Projections__c</fullName>
    <label>Projections</label>
    <length>255</length>
    <type>Text</type>
</CustomField>