force-app/main/default/objects/Account/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <description>Promo Code requested from Marketing</description>
    <inlineHelpText>Marketing Promo Code</inlineHelpText>
    <label>Promo Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>