force-app/main/default/objects/Account/fields/Properly_licensed__c.field-meta.xml
<CustomField>
    <fullName>Properly_licensed__c</fullName>
    <label>Properly licensed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>