force-app/main/default/objects/Account/fields/Purchased__c.field-meta.xml
<CustomField>
    <fullName>Purchased__c</fullName>
    <description>not used</description>
    <formula>Total_Purchased__c / Total_Commitment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>