force-app/main/default/objects/Account/fields/Reason_for_Denial__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Denial__c</fullName>
    <label>Reason for Denial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>