force-app/main/default/objects/Account/fields/Refer_to_Asset_Management__c.field-meta.xml
<CustomField>
    <fullName>Refer_to_Asset_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to trigger rich text &quot;refer to AM&quot; instructions on the account and related deals</description>
    <inlineHelpText>Check this box if this account is being monitored by asset management.</inlineHelpText>
    <label>Refer to Asset Management</label>
    <type>Checkbox</type>
</CustomField>