force-app/main/default/objects/Account/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referring Account</description>
    <inlineHelpText>Referring Brokerage, Vendor or Client Account.  Select the Referral Contact to populate this field.</inlineHelpText>
    <label>Referral Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Referred</relationshipLabel>
    <relationshipName>AccountsReferred</relationshipName>
    <type>Lookup</type>
</CustomField>