force-app/main/default/objects/Account/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <description>Not Used</description>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>