force-app/main/default/objects/Account/fields/Remaining_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Commitment__c</fullName>
    <formula>Total_Commitment__c - Total_Purchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>