force-app/main/default/objects/Account/fields/Rental_Guidelines_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Guidelines_Approved_Date__c</fullName>
    <label>Rental - Guidelines Approved Date</label>
    <type>Date</type>
</CustomField>