force-app/main/default/objects/Account/fields/Rental_Guidelines_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Guidelines_Received_Date__c</fullName>
    <description>Lender Partnerships field</description>
    <label>Rental -  Guidelines Received Date</label>
    <type>Date</type>
</CustomField>