force-app/main/default/objects/Account/fields/Rental_Loan_Docs_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Loan_Docs_Approved_Date__c</fullName>
    <label>Rental - Loan Docs Approved Date</label>
    <type>Date</type>
</CustomField>