force-app/main/default/objects/Account/fields/Rental_Loan_Docs_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Loan_Docs_Received_Date__c</fullName>
    <description>Lender Partnerships field</description>
    <label>Rental - Loan Docs Received Date</label>
    <type>Date</type>
</CustomField>