force-app/main/default/objects/Account/fields/Rental_MLPA_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_MLPA_Executed_Date__c</fullName>
    <description>Rental Mortgage Loan Purchase Agreement Executed Date</description>
    <inlineHelpText>Rental Mortgage Loan Purchase Agreement Executed Date</inlineHelpText>
    <label>Rental - MLPA Executed Date</label>
    <type>Date</type>
</CustomField>