force-app/main/default/objects/Account/fields/Rental_MLPA_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_MLPA_Sent_Date__c</fullName>
    <description>Rental Mortgage Loan Purchase Agreement Sent Date</description>
    <inlineHelpText>Rental Mortgage Loan Purchase Agreement Sent Date</inlineHelpText>
    <label>Rental - MLPA Sent Date</label>
    <type>Date</type>
</CustomField>