force-app/main/default/objects/Account/fields/Rental_Monthly_Units__c.field-meta.xml
<CustomField>
    <fullName>Rental_Monthly_Units__c</fullName>
    <description>Lender partnerships field. The estimated average monthly count of Rental units in their lending portfolio.</description>
    <inlineHelpText>The estimated average monthly count of Rental units in their lending portfolio.</inlineHelpText>
    <label>Rental - Monthly Units (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>