force-app/main/default/objects/Account/fields/Repeat_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Borrower__c</fullName>
    <description>Has 2 or more Closed Won Deals</description>
    <formula>Deals_Won__c &gt;= 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Has 2 or more Closed Won Deals</inlineHelpText>
    <label>Repeat Borrower</label>
    <type>Checkbox</type>
</CustomField>