force-app/main/default/objects/Account/fields/Require_Originator_Approval_Term_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Require_Originator_Approval_Term_Sheet__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>A checked box (True) requires a user to check a box at the term sheet deal document in order for the term sheet to be sent to a borrower</inlineHelpText>
    <label>Require Originator Approval Term Sheet</label>
    <type>Checkbox</type>
</CustomField>