force-app/main/default/objects/Account/fields/Resumes_of_any_new_owner_s_key_personnel__c.field-meta.xml
<CustomField>
    <fullName>Resumes_of_any_new_owner_s_key_personnel__c</fullName>
    <label>Resumes of any new owner’s/key personnel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>