force-app/main/default/objects/Account/fields/Review_Year__c.field-meta.xml
<CustomField>
    <fullName>Review_Year__c</fullName>
    <description>Not Used</description>
    <label>Review Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>