force-app/main/default/objects/Account/fields/RTL_UW_Guidelines_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_UW_Guidelines_Received_Date__c</fullName>
    <description>Lender Partnerships field</description>
    <label>RTL - UW Guidelines Received Date</label>
    <type>Date</type>
</CustomField>