force-app/main/default/objects/Account/fields/SA_Bridge_LTM_Actual__c.field-meta.xml
<CustomField>
    <fullName>SA_Bridge_LTM_Actual__c</fullName>
    <label>SA Bridge LTM Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>