force-app/main/default/objects/Account/fields/SA_Bridge_Projections__c.field-meta.xml
<CustomField>
    <fullName>SA_Bridge_Projections__c</fullName>
    <label>SA Bridge Projections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>