force-app/main/default/objects/Account/fields/SA_Rental_Projections__c.field-meta.xml
<CustomField>
    <fullName>SA_Rental_Projections__c</fullName>
    <label>SA Rental Projections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>