force-app/main/default/objects/Account/fields/scanbizcards__ScanBizCards__c.field-meta.xml
<CustomField>
    <fullName>scanbizcards__ScanBizCards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ScanBizCards</label>
    <type>Checkbox</type>
</CustomField>