force-app/main/default/objects/Account/fields/Second_Originator__c.field-meta.xml
<CustomField>
    <fullName>Second_Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Originator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>