force-app/main/default/objects/Account/fields/Secondary_Lender__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Lender__c</fullName>
    <description>Secondary Lender (Updated Monthly with 3rd Party Data)</description>
    <inlineHelpText>Secondary Lender (Updated Monthly with 3rd Party Data)</inlineHelpText>
    <label>Secondary Lender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>