force-app/main/default/objects/Account/fields/SFR_Investor__c.field-meta.xml
<CustomField>
    <fullName>SFR_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFR Investor (Updated Monthly with 3rd Party Data)</description>
    <inlineHelpText>SFR Investor (Updated Monthly with 3rd Party Data)</inlineHelpText>
    <label>SFR Investor</label>
    <type>Checkbox</type>
</CustomField>