force-app/main/default/objects/Account/fields/Sourcing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Fee__c</fullName>
    <description>Delete or repurpose</description>
    <label>Sourcing Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100 bps</fullName>
            </value>
            <value>
                <fullName>50 bps</fullName>
            </value>
            <value>
                <fullName>25 bps</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>