force-app/main/default/objects/Account/fields/Sourcing_Fee_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Fee_Formula__c</fullName>
    <description>delete or repurpose</description>
    <formula>TEXT ( Referral_Source__r.Sourcing_Fee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Sourcing Fee from the Referring Source</inlineHelpText>
    <label>Referral Source Sourcing Fee</label>
    <type>Text</type>
</CustomField>