force-app/main/default/objects/Account/fields/State_Concentration__c.field-meta.xml
<CustomField>
    <fullName>State_Concentration__c</fullName>
    <label>State Concentration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>