force-app/main/default/objects/Account/fields/State_Concentration_Percent__c.field-meta.xml
<CustomField>
    <fullName>State_Concentration_Percent__c</fullName>
    <label>State Concentration Percent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>