force-app/main/default/objects/Account/fields/State_Licenses__c.field-meta.xml
<CustomField>
    <fullName>State_Licenses__c</fullName>
    <description>States in which the Broker has licneses</description>
    <label>State Licenses</label>
    <length>30</length>
    <type>Text</type>
</CustomField>