force-app/main/default/objects/Account/fields/State_of_Inc_Org__c.field-meta.xml
<CustomField>
    <fullName>State_of_Inc_Org__c</fullName>
    <label>State of Inc / Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>