force-app/main/default/objects/Account/fields/Strategic_Account__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>10.01.2018 Retired Field</description>
    <inlineHelpText>10.01.2018 Retired Field</inlineHelpText>
    <label>Strategic Account</label>
    <type>Checkbox</type>
</CustomField>