force-app/main/default/objects/Account/fields/System_of_Origination__c.field-meta.xml
<CustomField>
    <fullName>System_of_Origination__c</fullName>
    <description>Source of this record, 5arch or CoreVest</description>
    <label>System of Origination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5arch</fullName>
            </value>
            <value>
                <fullName>CoreVest</fullName>
                <default>true</default>
                <label>CoreVest</label>
            </value>
            <value>
                <fullName>CoreVest &amp; 5Arch</fullName>
            </value>
            <value>
                <fullName>Riverbend</fullName>
            </value>
            <value>
                <fullName>CoreVest &amp; Riverbend</fullName>
            </value>
            <value>
                <fullName>CoreVest, 5Arch &amp; Riverbend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>