force-app/main/default/objects/Account/fields/Term_LTM_Actual__c.field-meta.xml
<CustomField>
    <fullName>Term_LTM_Actual__c</fullName>
    <label>Term LTM Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>