force-app/main/default/objects/Account/fields/Term_Projections__c.field-meta.xml
<CustomField>
    <fullName>Term_Projections__c</fullName>
    <label>Term Projections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>